// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas unitarias en el componente GifExpertApp.js se debe mostrar el componente <GifExpertApp /> correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <CategoryAdd
    setCategorias={[Function]}
  />
  <br />
  <hr />
  <GifGrid
    categoria="Naruto"
    key="0"
  />
</Fragment>
`;

exports[`Pruebas unitarias en el componente GifExpertApp.js se debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <CategoryAdd
    setCategorias={[Function]}
  />
  <br />
  <hr />
  <GifGrid
    categoria="Samurai X"
    key="0"
  />
  <GifGrid
    categoria="Saitama"
    key="1"
  />
  <GifGrid
    categoria="Naruto"
    key="2"
  />
</Fragment>
`;
